GSLT/src/test/module/bad/BadBindSelf.module
Module BadBindSelf {
  Theory Bad() {
    Nil
      Exports { Proc; Name; }
      Terms {
        PRecv . Proc ::= "for" "(" (Bind Name [0]) "<-" Name ")" "{" Proc "}" ;
      }
  }
}
